--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0-",
+    "@angular/cdk": "^12.2.12",
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
     "@angular/forms": "~12.1.0-",
+    "@angular/material": "^12.2.12",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "monaco-editor": "^0.29.1",
+    "ng-animate": "^1.0.0",
+    "ngx-highlightjs": "^5.0.0",
+    "ngx-monaco-editor": "^12.0.0",
+    "ngx-quill": "^14.3.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -26,6 +34,7 @@
     "@angular-devkit/build-angular": "~12.1.3",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
+    "@types/quill": "^2.0.9",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
